# KB2040-CD74HCx4067-controller

./: .gitignore  README.md
mux_controller/: mux_controller.ino
python/: README.md  pyproject.toml  test_mux.py
python/mux_controller/: __init__.py  controller.py
